@@ -1440,8 +1440,6 @@ eval_node(self, node)
 
 int ruby_in_eval;
 
-static int rb_thread_join _((rb_thread_t, double));
-
 static void rb_thread_cleanup _((void));
 static void rb_thread_wait_other_threads _((void));
 
@@ -11413,8 +11411,11 @@ rb_thread_select(max, read, write, except, timeout)
     return curr_thread->select_value;
 }
 
+static int rb_thread_join0 _((rb_thread_t, double));
+int rb_thread_join _((VALUE, double));
+
 static int
-rb_thread_join(th, limit)
+rb_thread_join0(th, limit)
     rb_thread_t th;
     double limit;
 {
@@ -11454,6 +11455,15 @@ rb_thread_join(th, limit)
     }
 
     return Qtrue;
+}
+
+int
+rb_thread_join(thread, limit)
+    VALUE thread;
+    double limit;
+{
+    if (limit < 0) limit = DELAY_INFTY;
+    return rb_thread_join0(rb_thread_check(thread), limit);
 }
 
 
@@ -11505,11 +11515,10 @@ rb_thread_join_m(argc, argv, thread)
 {
     VALUE limit;
     double delay = DELAY_INFTY;
-    rb_thread_t th = rb_thread_check(thread);
 
     rb_scan_args(argc, argv, "01", &limit);
     if (!NIL_P(limit)) delay = rb_num2dbl(limit);
-    if (!rb_thread_join(th, delay))
+    if (!rb_thread_join0(rb_thread_check(thread), delay))
 	return Qnil;
     return thread;
 }
@@ -12499,7 +12508,7 @@ rb_thread_value(thread)
 {
     rb_thread_t th = rb_thread_check(thread);
 
-    while (!rb_thread_join(th, DELAY_INFTY));
+    while (!rb_thread_join0(th, DELAY_INFTY));
 
     return th->result;
 }
