@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-03-23"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090323
-#define RUBY_PATCHLEVEL 151
+#define RUBY_PATCHLEVEL 152
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
